--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -12,6 +12,7 @@ Flask-Cors==4.0.0
 Flask-JWT-Extended==4.5.3
 Flask-MySQL==1.5.2
 frozenlist==1.3.3
+gunicorn==21.2.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
