--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,6 +7,7 @@ blinker==1.6.3
 certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
+cryptography==41.0.4
 Flask==2.2.5
 Flask-Cors==4.0.0
 Flask-JWT-Extended==4.5.3
